--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:Laboratory Blog
 SEOTitle: Laboratory Blog
 header-img: img/post-bg-desk.jpg
-email: aserincn@gmail.com
+email: aserincn@outlook.com
 description: "Welcome to here"
 keyword: "BY, BY Blog, ASLT的博客, Hacking,hacker,aslt,blog,laboratory,aser,aser-laboratory"
 url: "http://qiubaiying.github.io"          # your host, for absolute URL
