--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/post-bg-desk.jpg
 email: aserincn@outlook.com
 description: "Welcome to here"
 keyword: "BY, BY Blog, ASLT的博客, Hacking,hacker,aslt,blog,laboratory,aser,aser-laboratory"
-url: "http://qiubaiying.github.io"          # your host, for absolute URL
+url: "http://laboratory-blog.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
 
