--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Laboratory Blog
 SEOTitle: Laboratory Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/head-pic.jpg
 email: aserincn@outlook.com
 description: "Welcome to here"
 keyword: "BY, BY Blog, ASLT的博客, Hacking,hacker,aslt,blog,laboratory,aser,aser-laboratory"
