--- a/_config.yml
+++ b/_config.yml
@@ -62,8 +62,8 @@ kramdown:
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
+  clientID: ddffc6ab959b70647306
+  clientSecret: 1d1b9e75d00425ffd8ec7b8afb171831adc37eba   #生成的clientSecret
   repo: laboratory-blog.github.io    #仓库名称
   owner: laboratory-blog    #github用户名
   admin: laboratory-blog
