--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_repo: "https://github.com/laboratory-blog/laaboratory-blog.github.io.git"
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "If you want then you can join us learn more together."
 sidebar-avatar: /img/cropped-photo_4_5aabc2706f012.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
