--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Laboratory Blog
+title: ASLT BLOG
 SEOTitle: Laboratory Blog
 header-img: img/head-pic.jpg
 email: aserincn@outlook.com
