--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: ASLT BLOG
-SEOTitle: Laboratory Blog
+title: Laboratory Site
+SEOTitle: ASLT BLOG
 header-img: img/head-pic.jpg
 email: aserincn@outlook.com
 description: "Welcome to here"
